# 8.semester

./: LICENSE
c++leg/: CMakeLists.txt  main.cpp
lec10/Templates/: CMakeLists.txt
lec10/Templates/src/: CMakeLists.txt  variadic.cpp
lec11/StaticVisitor/: CMakeLists.txt  README.md
lec11/StaticVisitor/include/: json_input.hpp  json_output.hpp  meta.hpp
lec11/StaticVisitor/src/: CMakeLists.txt  data.hpp  json_input_test.cpp  json_output_test.cpp  meta_test.cpp  move-exercise.cpp
lec12/: CMakeLists.txt  main.cpp
lec3/: CMakeLists.txt  main.cpp  spy.cpp
lec4/: CMakeLists.txt  Polyline.cpp  Polyline.h  main.cpp
lec5/: CMakeLists.txt  README.md
lec5/include/: number_series.hpp
lec5/source/: number_series.cpp
lec5/tests/: CMakeLists.txt  main.cpp  number_series_test.cpp  sort_bm.cpp
lec6/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  main.cpp
lec7/calculator/calculator/: calculator.hpp  calculator_test.cpp
lec8/: CMakeLists.txt  main.cpp
lec9/: CMakeLists.txt  main.cpp
lec9/Templates/src/: CMakeLists.txt  kindof_test.cpp  type_name_test.cpp
stochastic/: .gitignore  CMakeLists.txt
stochastic/benchmarking/: CMakeLists.txt  SimBenchmark.cpp
stochastic/cmake/: Benchmark.cmake  Test.cmake
stochastic/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
stochastic/examples/results/: Example1.csv  Example3.csv  ReactionNetwork-1.txt  ReactionNetwork-2.txt  ReactionNetwork-3.txt  reaction_graph.py  visualization.py
stochastic/headers/: Agent.h  Reactant.h  ReactantGroup.h  Reaction.h  ReactionBuilder.h  Simulator.h  SymbolTable.h  Vessel.h
stochastic/implementations/: ReactantGroup.cpp  Reaction.cpp  Simulator.cpp  SymbolTable.cpp  Vessel.cpp
stochastic/test/: CMakeLists.txt  test_SymbolTable.cpp  test_Vessel.cpp
